--- a/backend/package.json
+++ b/backend/package.json
@@ -16,5 +16,8 @@
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "mongoose": "^7.2.4"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
